apps/hello-service-b/envs/dev/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service-b
spec:
  template:
    spec:
      containers:
      - name: hello-service-b
