apps/hello-service-b/envs/dev/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hello-service-b
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /dev/hello-service-b
            pathType: Prefix
            backend:
              service:
                name: hello-service-b
                port:
                  number: 80
